# M2

./: .gitignore
.github/workflows/: build_cmake.yml  test_build.yml
M2/: CMakeLists.txt  test.txt
M2/Macaulay2/d/: main.c
M2/Macaulay2/e/: Eschreyer.cpp  GF.cpp  GF.hpp  ZZ.cpp  ZZ.hpp  ZZp.cpp  ZZp.hpp  aring-glue.hpp  frac.cpp  frac.hpp  freemod.cpp  freemod.hpp  gbring.cpp  geovec.hpp  localring.cpp  localring.hpp  mat.cpp  matrix.cpp  matrix.hpp  mutablecomplex.hpp  points.cpp  poly.cpp  polyring.cpp  polyring.hpp  relem.cpp  ring-vecs.cpp  ring.cpp  ring.hpp  ringmap.cpp  ringmap.hpp  schur2.cpp  schur2.hpp  schurSn.hpp  skewpoly.hpp  style.hpp  tower.cpp  tower.hpp  x-factor.cpp  x-relem.cpp
M2/Macaulay2/e/f4/: gausser.cpp
M2/Macaulay2/e/more-tests/: CMakeLists.txt  ebasi.cpp
M2/Macaulay2/e/rings/: Ring.h  Ring.hpp  RingEnum.h  RingVec.hpp
M2/Macaulay2/e/unit-tests/: CMakeLists.txt  bar.cpp  foo.cpp  foo.h
M2/cmake/: build-libraries.cmake
